--- a/index.html
+++ b/index.html
@@ -1,50 +1,106 @@
-# 🌐 Riposis
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Riposis - Portfolio</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      color: #333;
+      padding-top: 60px;
+    }
+    header {
+      text-align: center;
+      padding: 40px 20px;
+      background: #0d6efd;
+      color: white;
+      border-radius: 0 0 20px 20px;
+    }
+    h1 {
+      font-size: 2.5rem;
+      font-weight: bold;
+    }
+    section {
+      margin: 50px auto;
+      max-width: 900px;
+      padding: 20px;
+    }
+    .screenshot {
+      max-width: 100%;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    footer {
+      text-align: center;
+      padding: 30px;
+      background: #eee;
+      margin-top: 60px;
+      border-radius: 20px 20px 0 0;
+    }
+    a {
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
 
-Welcome to **Riposis.me** — my personal portfolio and project showcase.  
-Here you’ll find my featured full-stack and frontend projects, built with **Spring Boot, JS, Hibernate, and more**.
+  <header>
+    <h1>🌐 Riposis</h1>
+    <p>Welcome to my personal portfolio & project showcase</p>
+  </header>
 
----
+  <section id="projects">
+    <h2>🚀 Featured Projects</h2>
+    <h4>🛒 Amazon Clone (Frontend Project)</h4>
+    <ul>
+      <li>Built with <strong>JavaScript</strong></li>
+      <li>Integrated with external REST APIs</li>
+      <li>Features: product listing, search, cart, checkout flow</li>
+      <li>Responsive design with Bootstrap</li>
+    </ul>
+    <p>
+      🔗 <a href="Amazon" target="_blank">Live Demo</a> | 
+      📂 <a href="https://github.com/RIP0SIS/Amazon" target="_blank">Source Code</a>
+    </p>
+    <h5>📸 Screenshot</h5>
+    <img src="image.png" alt="Amazon Clone Screenshot" class="screenshot">
+  </section>
 
-## 🚀 Featured Projects
+  <section id="game">
+    <h2>🎮 Game</h2>
+    <p>
+      <a href="game.html" target="_blank" class="btn btn-primary">Play Game</a>
+    </p>
+  </section>
 
-### 🛒 Amazon Clone (Frontend Project)
-A frontend clone of Amazon’s product listing page with cart functionality.  
-- 🟨JS Built with **JavaScript**  
-- 🌐 Integrated with external REST APIs  
-- 🛍️ Features: product listing, search, cart, checkout flow  
-- 🎨 Responsive design with Bootstrap  
+  <section id="tech">
+    <h2>🛠️ Tech Stack</h2>
+    <ul>
+      <li><strong>Backend:</strong> Spring Boot, Spring Security, JPA/Hibernate</li>
+      <li><strong>Frontend:</strong> HTML, CSS, JavaScript</li>
+      <li><strong>Database:</strong> MySQL</li>
+      <li><strong>Testing:</strong> Jasmine, Mockito</li>
+      <li><strong>Docs & Tools:</strong> OpenAI, Git, VS Code, IntelliJ</li>
+    </ul>
+  </section>
 
-🔗 **Live Demo:** [riposis.me/amazon](https://riposis.me/Amazon)  
-📂 **Source Code:** [GitHub Repo](https://github.com/RIP0SIS/Amazon)
+  <section id="about">
+    <h2>👨‍💻 About Me</h2>
+    <p>I’m a <strong>Full Stack Developer</strong> passionate about building clean, scalable applications with <strong>Java + Spring Boot</strong> on the backend and <strong>JS + React</strong> on the frontend.</p>
+    <p>
+      📫 Reach me at: 
+      <a href="mailto:restinpeace869@gmail.com">restinpeace869@gmail.com</a><br>
+      📂 GitHub: 
+      <a href="https://github.com/RIP0SIS" target="_blank">RIP0SIS</a>
+    </p>
+  </section>
 
----
+  <footer>
+    <p>© 2025 Riposis.me — Built with ❤️ and Java + JS</p>
+  </footer>
 
-## 📸 Screenshots
-
-| Amazon Clone (Frontend) |
-|--------------------------|
-![A screenshot of the Amazon clone project interface](image.png)
-
----
-
-## 🛠️ Tech Stack
-
-- **Backend:** Spring Boot, Spring Security, JPA/Hibernate  
-- **Frontend:** HTML, CSS, JavaScript
-- **Database:** MySQL   
-- **Testing:** Jasmine, Mockito  
-- **Docs & Tools:** OpenAI, Git, VS Code, IntelliJ
-
----
-# 🎮 Game
-
-[Play Here](game.html)
-
----
-
-## 👨‍💻 About Me
-
-I’m a **Full Stack Developer** passionate about building clean, scalable applications with **Java + Spring Boot** on the backend and **JS + React** on the frontend.  
-
-📫 Reach me at: [Link](mailto:restinpeace869@gmail.com)  
-📂 GitHub: [Link](https://github.com/RIP0SIS)
+</body>
+</html>
