--- a/game.html
+++ b/game.html
@@ -33,7 +33,7 @@
     <button class="auto-play-button js-auto-play">Autoplay</button>
 
 
-    <script src="scripts/rock-paper-scissors.js"></script>
+    <script src="rock-paper-scissors.js"></script>
 
   </body>
 </html>
