--- a/index.html
+++ b/index.html
@@ -1,106 +1,259 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Riposis - Portfolio</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Riposis — Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      color: #333;
-      padding-top: 60px;
+    :root{
+      --accent:#0d6efd;
+      --muted:#6c757d;
+      --card:#ffffff;
+      --glass: rgba(255,255,255,0.6);
     }
-    header {
-      text-align: center;
-      padding: 40px 20px;
-      background: #0d6efd;
+    *{box-sizing:border-box}
+    body{
+      font-family: 'Inter', Arial, sans-serif;
+      background: linear-gradient(180deg,#f7fbff 0%, #f2f6ff 60%);
+      color:#0f1721;
+      margin:0;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+    }
+    header.site-header{
+      background: linear-gradient(90deg,#0d6efd 0%, #6f42c1 100%);
       color: white;
-      border-radius: 0 0 20px 20px;
+      padding:3.5rem 1rem;
+      border-bottom-left-radius: 28px;
+      border-bottom-right-radius: 28px;
+      box-shadow: 0 10px 30px rgba(13,110,253,0.12);
+      text-align:center;
     }
-    h1 {
-      font-size: 2.5rem;
-      font-weight: bold;
+    header .logo{
+      display:flex;align-items:center;gap:12px;justify-content:center;margin-bottom:8px
     }
-    section {
-      margin: 50px auto;
-      max-width: 900px;
-      padding: 20px;
+    header h1{font-size:2.25rem;margin:0;letter-spacing:-0.5px}
+    header p.lead{margin:0.25rem 0 0;font-weight:500;opacity:0.95}
+
+    .container-main{max-width:1100px;margin: -40px auto 60px;padding:0 16px}
+
+    .card-project{
+      border:0;border-radius:14px;padding:18px;background:linear-gradient(180deg, rgba(255,255,255,0.9), rgba(255,255,255,0.8));
+      box-shadow:0 8px 24px rgba(16,24,40,0.06);
+      transition:transform .22s ease, box-shadow .22s ease
     }
-    .screenshot {
-      max-width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    .card-project:hover{transform:translateY(-6px);box-shadow:0 18px 40px rgba(16,24,40,0.12)}
+
+    .project-screenshot{width:100%;height:220px;object-fit:cover;border-radius:10px;display:block}
+
+    .badge-tech{background:#eef2ff;color:#4f46e5;font-weight:600;padding:.25rem .6rem;border-radius:999px;margin-right:8px}
+
+    .section-title{display:flex;justify-content:space-between;align-items:center;margin-bottom:14px}
+    .section-title h2{margin:0;font-size:1.25rem}
+
+    .glass-card{background: linear-gradient(180deg, rgba(255,255,255,0.85), rgba(255,255,255,0.7));border-radius:12px;padding:18px;box-shadow:0 6px 18px rgba(16,24,40,0.06)}
+
+    footer.site-footer{margin-top:40px;padding:28px;text-align:center;color:var(--muted)}
+
+    /* project modal styles */
+    .props-list{list-style:none;padding:0;margin:0}
+    .props-list li{padding:6px 0;border-bottom:1px dashed #eef2ff}
+
+    /* small screens tweak */
+    @media (max-width:575px){
+      header h1{font-size:1.6rem}
+      .project-screenshot{height:160px}
     }
-    footer {
-      text-align: center;
-      padding: 30px;
-      background: #eee;
-      margin-top: 60px;
-      border-radius: 20px 20px 0 0;
-    }
-    a {
-      text-decoration: none;
-    }
+
+    /* subtle entrance */
+    .fade-up{opacity:0;transform:translateY(10px);animation:fadeUp .6s forwards}
+    @keyframes fadeUp{to{opacity:1;transform:none}}
+
+    /* CTA */
+    .btn-primary-ghost{background:transparent;border:2px solid rgba(255,255,255,0.18);color:white}
+
+    /* dark toggle */
+    .theme-toggle{cursor:pointer}
   </style>
 </head>
 <body>
-
-  <header>
-    <h1>🌐 Riposis</h1>
-    <p>Welcome to my personal portfolio & project showcase</p>
+  <header class="site-header">
+    <div class="logo">
+      <div style="background:rgba(255,255,255,0.14);padding:10px;border-radius:10px;display:inline-flex;align-items:center;justify-content:center;">
+        <i class="bi bi-code-slash" style="font-size:1.4rem;color:white"></i>
+      </div>
+      <div style="text-align:left">
+        <h1>Riposis</h1>
+        <p class="lead">Full‑Stack Developer — Java • Spring Boot • Modern Web</p>
+      </div>
+    </div>
+    <div style="margin-top:14px;">
+      <a class="btn btn-sm btn-outline-light me-2" href="#projects"><i class="bi bi-lightning-charge-fill"></i> Featured</a>
+      <a class="btn btn-sm btn-light btn-primary-ghost" href="#contact">Contact</a>
+    </div>
   </header>
 
-  <section id="projects">
-    <h2>🚀 Featured Projects</h2>
-    <h4>🛒 Amazon Clone (Frontend Project)</h4>
-    <ul>
-      <li>Built with <strong>JavaScript</strong></li>
-      <li>Integrated with external REST APIs</li>
-      <li>Features: product listing, search, cart, checkout flow</li>
-      <li>Responsive design with Bootstrap</li>
-    </ul>
-    <p>
-      🔗 <a href="Amazon" target="_blank">Live Demo</a> | 
-      📂 <a href="https://github.com/RIP0SIS/Amazon" target="_blank">Source Code</a>
-    </p>
-    <h5>📸 Screenshot</h5>
-    <img src="image.png" alt="Amazon Clone Screenshot" class="screenshot">
-  </section>
+  <main class="container-main">
+    <div class="row g-4">
 
-  <section id="game">
-    <h2>🎮 Game</h2>
-    <p>
-      <a href="game.html" target="_blank" class="btn btn-primary">Play Game</a>
-    </p>
-  </section>
+      <div class="col-12 col-lg-8 fade-up">
+        <div class="card-project">
+          <div class="d-flex align-items-start justify-content-between mb-3">
+            <div>
+              <h3 class="mb-1">Spring Boot To‑Do Management Application</h3>
+              <div style="color:var(--muted);font-size:.95rem">Hybrid backend (JSP MVC + JSON REST) • Production-ready patterns • Secure & tested</div>
+            </div>
+            <div class="text-end">
+              <div class="badge-tech">Java</div>
+              <div class="badge-tech">Spring Boot</div>
+            </div>
+          </div>
 
-  <section id="tech">
-    <h2>🛠️ Tech Stack</h2>
-    <ul>
-      <li><strong>Backend:</strong> Spring Boot, Spring Security, JPA/Hibernate</li>
-      <li><strong>Frontend:</strong> HTML, CSS, JavaScript</li>
-      <li><strong>Database:</strong> MySQL</li>
-      <li><strong>Testing:</strong> Jasmine, Mockito</li>
-      <li><strong>Docs & Tools:</strong> OpenAI, Git, VS Code, IntelliJ</li>
-    </ul>
-  </section>
+          <img src="todo-screenshot.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
 
-  <section id="about">
-    <h2>👨‍💻 About Me</h2>
-    <p>I’m a <strong>Full Stack Developer</strong> passionate about building clean, scalable applications with <strong>Java + Spring Boot</strong> on the backend and <strong>JS + React</strong> on the frontend.</p>
-    <p>
-      📫 Reach me at: 
-      <a href="mailto:restinpeace869@gmail.com">restinpeace869@gmail.com</a><br>
-      📂 GitHub: 
-      <a href="https://github.com/RIP0SIS" target="_blank">RIP0SIS</a>
-    </p>
-  </section>
+          <p style="margin-bottom:10px">Designed and implemented a hybrid backend that exposes the same To-Do domain through both a JSP-based MVC UI and a JSON REST API, demonstrating separation of concerns and reusability of business logic.</p>
 
-  <footer>
-    <p>© 2025 Riposis.me — Built with ❤️ and Java + JS</p>
+          <ul class="props-list mb-3">
+            <li><strong>REST API</strong>: Full CRUD with correct HTTP verbs and ResponseEntity wrappers.</li>
+            <li><strong>Validation & Errors</strong>: @Valid DTOs, centralized @ControllerAdvice returning structured JSON error payloads.</li>
+            <li><strong>Persistence</strong>: Spring Data JPA + Hibernate; H2 for local dev, MySQL config (Docker-ready) for production.</li>
+            <li><strong>Security</strong>: Spring Security with BCrypt, in-memory demo users and role-based access control.</li>
+            <li><strong>Dev Experience</strong>: data.sql for bootstrapped demo data; profiles for quick dev ↔ prod switch.</li>
+          </ul>
+
+          <div class="d-flex gap-2">
+            <a href="#" class="btn btn-primary btn-sm">View Repo</a>
+            <a href="#" class="btn btn-outline-secondary btn-sm">Live Demo</a>
+            <button class="btn btn-sm btn-outline-info" data-bs-toggle="modal" data-bs-target="#projectModal">More details</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-lg-4 fade-up">
+        <div class="glass-card">
+          <h4 style="margin-bottom:12px">Featured Projects</h4>
+          <div class="mb-3">
+            <strong>Amazon Clone</strong>
+            <div style="color:var(--muted);font-size:.92rem">Frontend-only (JS + Bootstrap). Product listing, cart, checkout flow.</div>
+            <div class="mt-2"><a href="https://github.com/RIP0SIS/Amazon" target="_blank">Source →</a></div>
+          </div>
+
+          <div class="mb-3">
+            <strong>Game</strong>
+            <div style="color:var(--muted);font-size:.92rem">Small browser game — playful demo to show interactivity.</div>
+            <div class="mt-2"><a href="game.html" target="_blank">Play →</a></div>
+          </div>
+
+          <hr>
+          <h5 style="margin-bottom:10px">Tech Stack</h5>
+          <div style="display:flex;flex-wrap:wrap;gap:6px">
+            <span class="badge bg-light text-dark">Spring Boot</span>
+            <span class="badge bg-light text-dark">Spring Security</span>
+            <span class="badge bg-light text-dark">JPA / Hibernate</span>
+            <span class="badge bg-light text-dark">JSP</span>
+            <span class="badge bg-light text-dark">Bootstrap</span>
+            <span class="badge bg-light text-dark">MySQL / H2</span>
+            <span class="badge bg-light text-dark">Docker</span>
+          </div>
+        </div>
+
+        <div style="height:18px"></div>
+
+        <div class="glass-card">
+          <h5>Contact</h5>
+          <p style="margin-bottom:6px">I'm open to internships and backend/frontend roles.</p>
+          <p style="margin-bottom:4px"><i class="bi bi-envelope"></i> <a href="mailto:restinpeace869@gmail.com">restinpeace869@gmail.com</a></p>
+          <p style="margin-bottom:4px"><i class="bi bi-github"></i> <a href="https://github.com/RIP0SIS" target="_blank">github.com/RIP0SIS</a></p>
+          <div class="d-grid mt-2">
+            <a class="btn btn-outline-primary btn-sm" href="#contact">Get in touch</a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-12 fade-up">
+        <div class="card-project p-3">
+          <h4>About Me</h4>
+          <p>I’m a <strong>Full Stack Developer</strong> passionate about building clean, scalable applications with <strong>Java + Spring Boot</strong> on the backend and modern JavaScript on the frontend. My backend journey focuses on production-ready patterns: layered architecture, DTOs, validation, and secure APIs.</p>
+          <div class="mt-3"><a href="#projects" class="btn btn-sm btn-primary">See projects</a></div>
+        </div>
+      </div>
+
+    </div>
+
+    <section id="contact" class="mt-4">
+      <div class="glass-card">
+        <div class="row">
+          <div class="col-md-8">
+            <h5>Let's build something together</h5>
+            <p style="color:var(--muted)">Email me with opportunities, or link me to a test / assignment and I’ll respond quickly.</p>
+          </div>
+          <div class="col-md-4 text-md-end align-self-center">
+            <a class="btn btn-primary" href="mailto:restinpeace869@gmail.com">Email me</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <small>© 2025 Riposis.me — Built with ❤️ and Java + JS</small>
+    </div>
   </footer>
 
+  <!-- Project details modal -->
+  <div class="modal fade" id="projectModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Spring Boot To‑Do Management Application — Details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h6>Overview</h6>
+          <p>Hybrid backend that serves both a JSP-based MVC UI and a JSON REST API — same domain model reused for both interfaces, demonstrating clean separation and reusability.</p>
+
+          <h6>Key Features</h6>
+          <ul>
+            <li>Comprehensive RESTful endpoints (CRUD) with ResponseEntity and correct HTTP statuses.</li>
+            <li>Bean Validation with @Valid and centralized @ControllerAdvice error mapping (structured JSON errorDetails payload).</li>
+            <li>Custom NotFoundException + centralized exception handling for consistent API consumers.</li>
+            <li>Security: Spring Security with BCrypt, in-memory demo users & role-based restrictions; session handling where needed.</li>
+            <li>Two DB profiles: H2 for quick local dev and MySQL (Docker) for production readiness — configuration hints included.</li>
+            <li>Bootstrapped demo data via data.sql and Docker-friendly settings for easy demos.</li>
+          </ul>
+
+          <h6>Tech & Practices</h6>
+          <p>Java, Spring Boot, Spring MVC, Spring Security, Spring Data JPA, Hibernate, JSP, Bean Validation, DTOs, Maven, Docker, H2/MySQL.</p>
+
+          <h6>Repo / Run</h6>
+          <p>Include links to repo + short run instructions here (replace with your repo & commands):</p>
+          <pre style="background:#f6f8fb;padding:10px;border-radius:8px">git clone &lt;repo-url&gt;
+cd project
+mvn spring-boot:run
+# or build docker image and run with docker-compose</pre>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <a href="#" class="btn btn-primary">Open Repo</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // simple fade in sequence
+    document.querySelectorAll('.fade-up').forEach((el, i)=>{ el.style.animationDelay = (i*80)+'ms'; });
+
+    // replace placeholder screenshot paths with real images when available
+    // small helper to open project links - replace '#' anchors with real URLs
+  </script>
 </body>
 </html>
