--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
     </div>
     <div style="margin-top:14px;">
-      <a class="btn btn-sm btn-outline-light me-2" href="#projects"><i class="bi bi-lightning-charge-fill"></i> Featured</a>
+      <a class="btn btn-sm btn-outline-light me-2" href="https://github.com/RIP0SIS/Amazon"><i class="bi bi-lightning-charge-fill"></i> Featured</a>
       <a class="btn btn-sm btn-light btn-primary-ghost" href="#contact">Contact</a>
     </div>
   </header>
@@ -178,7 +178,7 @@
         <div class="card-project p-3">
           <h4>About Me</h4>
           <p>I’m a <strong>Full Stack Developer</strong> passionate about building clean, scalable applications with <strong>Java + Spring Boot</strong> on the backend and modern JavaScript on the frontend. My backend journey focuses on production-ready patterns: layered architecture, DTOs, validation, and secure APIs.</p>
-          <div class="mt-3"><a href="#projects" class="btn btn-sm btn-primary">See projects</a></div>
+          <div class="mt-3"><a href="https://github.com/RIP0SIS/Amazon" class="btn btn-sm btn-primary">See projects</a></div>
         </div>
       </div>
 
