Update project links, screenshots, and About Me section
Updated project links and added new screenshots for the To-Do Management App. Enhanced the 'About Me' section and included additional features in the project description.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
     </div>
     <div style="margin-top:14px;">
-      <a class="btn btn-sm btn-outline-light me-2" href="https://github.com/RIP0SIS/Amazon"><i class="bi bi-lightning-charge-fill"></i> Featured</a>
+      <a class="btn btn-sm btn-outline-light me-2" href="https://github.com/RIP0SIS/Todo-Management-Web-Application"><i class="bi bi-lightning-charge-fill"></i> Featured</a>
       <a class="btn btn-sm btn-light btn-primary-ghost" href="#contact">Contact</a>
     </div>
   </header>
@@ -112,7 +112,14 @@
             </div>
           </div>
 
-          <img src="todo-screenshot.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
+          <img src="Todo-App-Screenshots/1.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
+          <img src="Todo-App-Screenshots/2.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
+          <img src="Todo-App-Screenshots/3.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
+          <img src="Todo-App-Screenshots/4.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
+          <img src="Todo-App-Screenshots/5.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
+          <img src="Todo-App-Screenshots/6.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
+          <img src="Todo-App-Screenshots/7.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
+          <img src="Todo-App-Screenshots/8.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
 
           <p style="margin-bottom:10px">Designed and implemented a hybrid backend that exposes the same To-Do domain through both a JSP-based MVC UI and a JSON REST API, demonstrating separation of concerns and reusability of business logic.</p>
 
@@ -138,7 +145,7 @@
           <div class="mb-3">
             <strong>Amazon Clone</strong>
             <div style="color:var(--muted);font-size:.92rem">Frontend-only (JS + Bootstrap). Product listing, cart, checkout flow.</div>
-            <div class="mt-2"><a href="https://github.com/RIP0SIS/Amazon" target="_blank">Source →</a></div>
+            <div class="mt-2"><a href="https://riposis.me/Amazon/amazon.html" target="_blank">Source →</a></div>
           </div>
 
           <div class="mb-3">
@@ -157,6 +164,7 @@
             <span class="badge bg-light text-dark">Bootstrap</span>
             <span class="badge bg-light text-dark">MySQL / H2</span>
             <span class="badge bg-light text-dark">Docker</span>
+            <span class="badge bg-light text-dark">Some Advance Rest Api Features</span>
           </div>
         </div>
 
@@ -177,8 +185,8 @@
       <div class="col-12 fade-up">
         <div class="card-project p-3">
           <h4>About Me</h4>
-          <p>I’m a <strong>Full Stack Developer</strong> passionate about building clean, scalable applications with <strong>Java + Spring Boot</strong> on the backend and modern JavaScript on the frontend. My backend journey focuses on production-ready patterns: layered architecture, DTOs, validation, and secure APIs.</p>
-          <div class="mt-3"><a href="https://github.com/RIP0SIS/Amazon" class="btn btn-sm btn-primary">See projects</a></div>
+          <p>I’m a <strong>Full Stack Developer</strong> passionate about building clean, scalable applications with <strong>Java + Spring Boot</strong> on the backend and modern JavaScript on the frontend. My backend journey focuses on production-ready patterns: layered architecture, DTOs, validation, and secure APIs. Seeking an opportunity to contribute to real-world projects, enhance technical expertise, and grow in a collaborative team environment.</p>
+          <div class="mt-3"><a href="https://riposis.me/Amazon/amazon.html" class="btn btn-sm btn-primary">See projects</a></div>
         </div>
       </div>
 
@@ -226,6 +234,9 @@
             <li>Security: Spring Security with BCrypt, in-memory demo users & role-based restrictions; session handling where needed.</li>
             <li>Two DB profiles: H2 for quick local dev and MySQL (Docker) for production readiness — configuration hints included.</li>
             <li>Bootstrapped demo data via data.sql and Docker-friendly settings for easy demos.</li>
+            <li> Integrated springdoc-openapi to auto-generate interactive OpenAPI/Swagger documentation for all REST endpoints, making the API easily testable and consumer-friendly.</li>
+            <li>Enabled Spring Boot Actuator to expose operational endpoints (health, metrics) for basic application observability and production readiness.</li>
+            <li>Applied static filtering on REST responses to control exposed fields and keep API contracts clean and intentional.</li>
           </ul>
 
           <h6>Tech & Practices</h6>
