Refactor project screenshots and update Amazon links
Updated project screenshots section with a grid layout and added click-to-view functionality for images. Modified links for the Amazon project to include both source and live demo.

--- a/index.html
+++ b/index.html
@@ -112,14 +112,75 @@
             </div>
           </div>
 
-          <img src="Todo-App-Screenshots/1.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
-          <img src="Todo-App-Screenshots/2.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
-          <img src="Todo-App-Screenshots/3.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
-          <img src="Todo-App-Screenshots/4.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
-          <img src="Todo-App-Screenshots/5.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
-          <img src="Todo-App-Screenshots/6.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
-          <img src="Todo-App-Screenshots/7.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
-          <img src="Todo-App-Screenshots/8.png" alt="To-Do Management App screenshot" class="project-screenshot mb-3">
+          <!-- Screenshots Grid -->
+<div class="row g-3 mb-3">
+
+  <div class="col-sm-6 col-lg-4">
+    <img src="Todo-App-Screenshots/1.png"
+         alt="Login Page"
+         class="img-fluid rounded shadow-sm project-screenshot"
+         onclick="window.open(this.src,'_blank')"
+         style="cursor:pointer">
+  </div>
+
+  <div class="col-sm-6 col-lg-4">
+    <img src="Todo-App-Screenshots/2.png"
+         alt="Welcome Page"
+         class="img-fluid rounded shadow-sm project-screenshot"
+         onclick="window.open(this.src,'_blank')"
+         style="cursor:pointer">
+  </div>
+
+  <div class="col-sm-6 col-lg-4">
+    <img src="Todo-App-Screenshots/3.png"
+         alt="Todo List"
+         class="img-fluid rounded shadow-sm project-screenshot"
+         onclick="window.open(this.src,'_blank')"
+         style="cursor:pointer">
+  </div>
+
+  <div class="col-sm-6 col-lg-4">
+    <img src="Todo-App-Screenshots/4.png"
+         alt="Add Todo Form"
+         class="img-fluid rounded shadow-sm project-screenshot"
+         onclick="window.open(this.src,'_blank')"
+         style="cursor:pointer">
+  </div>
+
+  <div class="col-sm-6 col-lg-4">
+    <img src="Todo-App-Screenshots/5.png"
+         alt="Validation Errors"
+         class="img-fluid rounded shadow-sm project-screenshot"
+         onclick="window.open(this.src,'_blank')"
+         style="cursor:pointer">
+  </div>
+
+  <div class="col-sm-6 col-lg-4">
+    <img src="Todo-App-Screenshots/6.png"
+         alt="Updated Todo List"
+         class="img-fluid rounded shadow-sm project-screenshot"
+         onclick="window.open(this.src,'_blank')"
+         style="cursor:pointer">
+  </div>
+
+  <div class="col-sm-6 col-lg-4">
+    <img src="Todo-App-Screenshots/7.png"
+         alt="Updated Todo List"
+         class="img-fluid rounded shadow-sm project-screenshot"
+         onclick="window.open(this.src,'_blank')"
+         style="cursor:pointer">
+  </div>
+
+  <div class="col-sm-6 col-lg-4">
+    <img src="Todo-App-Screenshots/8.png"
+         alt="Updated Todo List"
+         class="img-fluid rounded shadow-sm project-screenshot"
+         onclick="window.open(this.src,'_blank')"
+         style="cursor:pointer">
+  </div>
+
+</div>
+
 
           <p style="margin-bottom:10px">Designed and implemented a hybrid backend that exposes the same To-Do domain through both a JSP-based MVC UI and a JSON REST API, demonstrating separation of concerns and reusability of business logic.</p>
 
@@ -132,8 +193,7 @@
           </ul>
 
           <div class="d-flex gap-2">
-            <a href="#" class="btn btn-primary btn-sm">View Repo</a>
-            <a href="#" class="btn btn-outline-secondary btn-sm">Live Demo</a>
+            <a href="https://github.com/RIP0SIS/Todo-Management-Web-Application" class="btn btn-primary btn-sm">View Repo</a>
             <button class="btn btn-sm btn-outline-info" data-bs-toggle="modal" data-bs-target="#projectModal">More details</button>
           </div>
         </div>
@@ -145,7 +205,10 @@
           <div class="mb-3">
             <strong>Amazon Clone</strong>
             <div style="color:var(--muted);font-size:.92rem">Frontend-only (JS + Bootstrap). Product listing, cart, checkout flow.</div>
-            <div class="mt-2"><a href="https://riposis.me/Amazon/amazon.html" target="_blank">Source →</a></div>
+            <div class="mt-2">
+              <a href="https://github.com/RIP0SIS/Amazon" target="_blank">Source →</a>
+              <a href="https://riposis.me/Amazon/amazon.html" target="_blank">Live →</a>
+            </div>
           </div>
 
           <div class="mb-3">
