Update portfolio to reflect Java Backend Developer role

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Riposis — Portfolio</title>
 
   <!-- Basic SEO / Social -->
-  <meta name="description" content="Riposis — Full-Stack Developer. Spring Boot To-Do Management Application: REST API, JSP UI, Validation, Security, OpenAPI, Actuator." />
-  <meta property="og:title" content="Riposis — Full-Stack Developer" />
+  <meta name="description" content="Riposis — Java Backend Developer. Spring Boot To-Do Management Application: REST API, JSP UI, Validation, Security, OpenAPI, Actuator." />
+  <meta property="og:title" content="Riposis — Java Backend Developer" />
   <meta property="og:description" content="Spring Boot To-Do App — hybrid backend (JSP + REST), validation, security, OpenAPI & Actuator." />
   <meta property="og:image" content="Todo-App-Screenshots/1.png" />
   <meta property="og:type" content="website" />
@@ -88,13 +88,13 @@
         </div>
         <div>
           <h1>Riposis</h1>
-          <p class="lead mb-0">Full-Stack Developer — Java • Spring Boot • Modern Web</p>
+          <p class="lead mb-0">Backend Developer — Java • Spring Boot • Modern Web</p>
         </div>
       </div>
 
       <div class="d-none d-md-flex align-items-center gap-2">
         <a class="btn btn-sm btn-outline-light" href="https://github.com/RIP0SIS/Todo-Management-Web-Application" target="_blank"><i class="bi bi-github"></i> Repo</a>
-        <a class="btn btn-sm btn-light btn-primary-ghost" href="#contact">Contact</a>
+        <a class="btn btn-sm btn-light btn-primary-ghost" href="mailto:restinpeace869@gmail.com">Contact</a>
       </div>
     </div>
   </header>
@@ -211,7 +211,7 @@
           <p class="mb-1"><i class="bi bi-envelope"></i> <a href="mailto:restinpeace869@gmail.com">restinpeace869@gmail.com</a></p>
           <p class="mb-1"><i class="bi bi-github"></i> <a href="https://github.com/RIP0SIS" target="_blank">github.com/RIP0SIS</a></p>
           <div class="d-grid mt-2">
-            <a class="btn btn-outline-primary btn-sm" href="#contact">Get in touch</a>
+            <a class="btn btn-outline-primary btn-sm" href="mailto:restinpeace869@gmail.com">Get in touch</a>
           </div>
         </div>
 
@@ -229,7 +229,7 @@
       <div class="col-12">
         <div class="card-project p-3">
           <h4>About Me</h4>
-          <p>I’m a <strong>Full Stack Developer</strong> passionate about building clean, scalable applications with <strong>Java + Spring Boot</strong> on the backend and modern JavaScript on the frontend. My backend focus is production-ready patterns: layered architecture, DTOs, validation, and secure APIs. I’m looking for roles where I can contribute backend expertise and learn cloud-native practices.</p>
+          <p>I’m a <strong>Java Backend Developer</strong> passionate about building clean, scalable applications with <strong>Java + Spring Boot</strong> on the backend and modern JavaScript on the frontend. My backend focus is production-ready patterns: layered architecture, DTOs, validation, and secure APIs. I’m looking for roles where I can contribute backend expertise and learn cloud-native practices.</p>
           <a href="https://riposis.me/Amazon/amazon.html" class="btn btn-sm btn-primary">See projects</a>
         </div>
       </div>
