Revise content in index.html for clarity and focus
Updated descriptions and contact preferences in index.html.

--- a/index.html
+++ b/index.html
@@ -161,7 +161,13 @@
           </div>
 
           <!-- Description & bullets -->
-          <p style="margin-bottom:10px">Designed and implemented a hybrid backend that exposes the same To-Do domain through both a JSP-based MVC UI and a JSON REST API, demonstrating separation of concerns and reusability of business logic.</p>
+         <p style="margin-bottom:6px">
+          Designed and implemented a hybrid backend that exposes the same To-Do domain through both a JSP-based MVC UI and a JSON REST API, demonstrating separation of concerns and reusability of business logic.
+        </p>
+
+          <p style="color:#6c757d;font-size:.9rem;margin-bottom:12px">
+            <strong>Scope:</strong> 15+ REST endpoints · Centralized validation & error handling · Dual DB profiles (H2 / MySQL)
+          </p>
 
           <ul class="props-list mb-3" style="padding-left:1rem">
             <li><strong>REST API</strong>: Full CRUD with correct HTTP verbs and `ResponseEntity` wrappers.</li>
@@ -207,7 +213,7 @@
 
         <div class="glass-card mb-3">
           <h5>Contact</h5>
-          <p class="mb-1" style="color:var(--muted)">Open to internships and backend/frontend roles.</p>
+          <p class="mb-1" style="color:var(--muted)">Open to backend and backend-heavy roles.</p>
           <p class="mb-1"><i class="bi bi-envelope"></i> <a href="mailto:restinpeace869@gmail.com">restinpeace869@gmail.com</a></p>
           <p class="mb-1"><i class="bi bi-github"></i> <a href="https://github.com/RIP0SIS" target="_blank">github.com/RIP0SIS</a></p>
           <div class="d-grid mt-2">
@@ -229,7 +235,7 @@
       <div class="col-12">
         <div class="card-project p-3">
           <h4>About Me</h4>
-          <p>I’m a <strong>Java Backend Developer</strong> passionate about building clean, scalable applications with <strong>Java + Spring Boot</strong> on the backend and modern JavaScript on the frontend. My backend focus is production-ready patterns: layered architecture, DTOs, validation, and secure APIs. I’m looking for roles where I can contribute backend expertise and learn cloud-native practices.</p>
+          <p>I’m a <strong>Java Backend Developer</strong> focused on building clean, scalable Spring Boot applications with REST APIs, validation, security, and database integration. I enjoy designing production-ready backend systems and am looking for opportunities to contribute backend expertise while growing in cloud-native development.</p>
           <a href="https://riposis.me/Amazon/amazon.html" class="btn btn-sm btn-primary">See projects</a>
         </div>
       </div>
