--- a/index.html
+++ b/index.html
@@ -223,11 +223,22 @@
 
         <div class="glass-card">
           <h5>Certifications</h5>
-          <ul style="list-style:none;padding:0;margin:0">
-            <li style="margin-bottom:8px;"><strong>AWS Certified Cloud Practitioner</strong> <small class="text-muted">— 2025</small></li>
-            <li style="margin-bottom:8px;"><strong>Oracle Certified Associate, Java SE</strong> <small class="text-muted">— 2024</small></li>
-            <li><strong>Spring Professional (self-study)</strong> <small class="text-muted">— In progress</small></li>
-          </ul>
+<ul style="list-style:none;padding:0;margin:0">
+  <li style="margin-bottom:8px;">
+    <strong>
+      <a href="https://drive.google.com/file/d/1PHUHbhTZPs4FQw-0Zjy4cZy4VhKlMS1q/view?usp=sharing" target="_blank" rel="noopener noreferrer">
+        AICTE Certified Java Backend Developer
+      </a>
+    </strong>
+    <small class="text-muted"> — 2025</small>
+  </li>
+
+  <li>
+    <strong>AWS Certified Solutions Architect – Associate (self-study)</strong>
+    <small class="text-muted"> — In progress (expected 2026)</small>
+  </li>
+</ul>
+
         </div>
       </div>
 
