Documented JUnit tests for repository layer
Added JUnit tests for the repository layer to verify persistence behavior, including save, find, delete operations, and custom methods like findByUsername.

--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@
             <li>Integrated <strong>springdoc-openapi</strong> to auto-generate interactive OpenAPI/Swagger documentation for REST endpoints.</li>
             <li>Enabled <strong>Spring Boot Actuator</strong> to expose operational endpoints (health, metrics) for basic observability.</li>
             <li>Applied static filtering on REST responses to control exposed fields and keep API contracts clean and intentional.</li>
+            <li>
+              <strong>Testing</strong>: Wrote JUnit tests for the repository layer using <code>@DataJpaTest</code> to verify persistence behavior; tested save, find, delete operations and custom methods like <code>findByUsername</code>.
+            </li>
           </ul>
 
           <h6>Repo / Run</h6>
